@@ -29,14 +29,8 @@
  */
 package com.yubico.jaas;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.URL;
-import java.net.URLConnection;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.security.auth.Subject;
 import javax.security.auth.callback.Callback;
@@ -45,10 +39,15 @@ import javax.security.auth.callback.NameCallback;
 import javax.security.auth.callback.UnsupportedCallbackException;
 import javax.security.auth.login.LoginException;
 import javax.security.auth.spi.LoginModule;
-
-import org.apache.commons.codec.binary.Base64;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import javax.xml.bind.DatatypeConverter;
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.URL;
+import java.net.URLConnection;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
 
 /**
  * A JAAS module for verifying OATH OTPs (One Time Passwords) using
@@ -177,7 +176,7 @@ public class HttpOathOtpLoginModule implements LoginModule {
 	boolean verify_otp(String userName, String otp) {
 		try {
 			String authString = userName + ":" + otp;
-			String authStringEnc = Base64.encodeBase64URLSafeString(authString.getBytes());
+			String authStringEnc = DatatypeConverter.printString(authString);
 
 			BufferedReader in = attemptAuthentication(authStringEnc);
 
